fixed overflow with clear: both

--- a/05-timers/01-Activities/17-FloatsBoxModel/style.css
+++ b/05-timers/01-Activities/17-FloatsBoxModel/style.css
@@ -26,6 +26,10 @@ body {
 
     background-color: #b20;
   }
+
+  #helper {
+      clear: both;
+  }
   
   #text-wrapper {
     width: 1024px;
